<resources>
    <string name="app_name">eSports</string>
    <string name="champions">League of Legends</string>
    <string name="gods">Smite</string>
    <string name="heroes">Dota 2</string>
    <string name="poster">Poster</string>
    <string name="guide">Guide</string>
    <string name="guide_champion">Guide Champion</string>
    <string name="champion_icon">Champion Icon</string>
    <string name="assassins_champion">Assassins Champion</string>
    <string name="assassins_description">Masters of precision, Assassins are agile hunters on the lookout for the perfect kill.</string>
    <string name="fighters_champion">Fighters Champion</string>
    <string name="fighters_description">A balance of power and defense, Fighters are born to brawl, preferring their bouts up close and personal.</string>
    <string name="mages_champion">Mages Champion</string>
    <string name="mages_description">Aggressive casters, Mages seek to destroy opponents through a range of mystical attacks, spells and abilities.</string>
    <string name="marksmen_champion">Marksmen Champion</string>
    <string name="marksmen_description">Ranged fighters, Marksmen are powerful but fragile. While they rely on their team to soak up damage, teams rely on them to deal it.</string>
    <string name="supports_champion">Supports Champion</string>
    <string name="supports_description">Stalwart defenders, Supports control the battlefield by augmenting allies and locking down enemies.</string>
    <string name="tanks_champion">Tanks Champion</string>
    <string name="tanks_description">Resilient bruisers, Tanks excel at shrugging off blows that would obliterate lesser allies.</string>
    <string name="guide_god">Guide God</string>
    <string name="god_icon">God Icon</string>
    <string name="guardian_god">Guardian God</string>
    <string name="guardian_god_description">Guardian gods are usually melee ranged and utilize Magical Power to boost the strength of their basic attacks and abilities</string>
    <string name="warrior_god">Warrior God</string>
    <string name="warrior_god_description">Warrior gods are typically melee and utilize Physical Power to boost the strength of their basic attacks and abilities</string>
    <string name="hunter_god">Hunter God</string>
    <string name="hunter_god_description">Hunter gods are typically ranged and utilize Physical Power to boost the strength of their basic attacks and abilities</string>
    <string name="mage_god">Mage God</string>
    <string name="mage_god_description">Mage gods are typically those with ranged attacks that utilize Magical Power to boost the potency of their basic attacks and abilities.</string>
    <string name="assassin_god">Assassin God</string>
    <string name="assassin_god_description">Assassin gods are usually melee and utilize Physical Power to boost their basic attacks and abilities.</string>
    <string name="guide_hero">Guide Hero</string>
    <string name="hero_icon">Hero Icon</string>
    <string name="strength_hero">Strength Hero</string>
    <string name="strength_description">One of the three primary attributes with the theme of defending against magic damage</string>
    <string name="agility_hero">Agility Hero</string>
    <string name="agility_description">One of the three primary attributes that grants attack speed and armor to every hero</string>
    <string name="intelligence_hero">Intelligence Hero</string>
    <string name="intelligence_description">One of the three primary attributes with the theme of improving spell-casting</string>
    <string name="back">Back</string>
    <string name="backdrop">Backdrop</string>
    <string name="about">About</string>
    <string name="stats">Stats</string>
    <string name="attributes">Attributes</string>
    <string name="ability">Ability</string>
    <string name="attack_damage">Attack Damage</string>
    <string name="attack_speed">Attack Speed</string>
    <string name="attack_range">Attack Range</string>
    <string name="move_speed">Move Speed</string>
    <string name="armor">Armor</string>
    <string name="magic_resistance">Magic Resistance</string>
    <string name="health_regeneration">Health Regeneration</string>
    <string name="resource_regeneration">Resource Regeneration</string>
    <string name="health">Health</string>
    <string name="mana">Mana</string>
    <string name="mana_regeneration">Mana Regeneration</string>
    <string name="resource">Resource</string>
    <string name="create">Create</string>
    <string name="new_champion">New Champion</string>
    <string name="new_god">New God</string>
    <string name="new_hero">New Hero</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="poster_url">Poster URL</string>
    <string name="backdrop_url">Backdrop URL</string>
    <string name="description">Description</string>
    <string name="rol">Rol</string>
    <string name="type">Type</string>
    <string name="attribute">Attribute</string>
    <string name="roles">Roles</string>
    <string name="strength">Strength</string>
    <string name="agility">Agility</string>
    <string name="intelligence">Intelligence</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="edit_champion">Edit Champion</string>
    <string name="edit_god">Edit God</string>
    <string name="edit_hero">Edit Hero</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
</resources>